@@ -1,6 +1,14 @@
 -=[ Gaim ]=-  The Pimpin' Penguin IM Client That's Good For The Soul!
 
 0.76 (04/01/2004):
+	Sean: Yeah, it's been a long time since the last release, and despite
+	what others may tell you, we were just really lazy.  This is pretty
+	much just 0.75 again, but, like, someone changed the "Info" icon and
+	I think, like, the Chinese translation may have been updated.  We did
+	nothing interesting on it at all.  Others may tell you "we haven't just
+	been lazy," or "you guys will find that we've managed to do some neat
+	stuf in this one."  They lie.  All of them.
+	
 	Luke: Okay, normally I wait for Sean to go first, but he said to commit.
 	Its been a few months since the last release, but we haven't just been
 	lazy. A very long ChangeLog for you all. Most notably of course is the
